@@ -1,9 +1,16 @@
 
+
+2004/09/15: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- fixed a bug in XML code
+
+
 2004/09/14: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added a function to GWEN_DBIO which allows to check whether a given file
   is supported by a given plugin
 - plugin descriptions now have a field for the filename
+- added flags for XML file reading
 
 
 ===========================================================================
